added 'HttpBackend' to the project: - set 'localPath' as a local backend route - created 'ENDPOINTS' constant object

--- a/src/translation/languages/ca.json
+++ b/src/translation/languages/ca.json
@@ -1,5 +1,5 @@
 {
-  "app": {
+  "project": {
     "title": "Benvinguts al projecte ita-profiles-frontend",
     "description": "Part frontend del projecte ita-profiles"
   }
