--- a/src/translation/languages/en.json
+++ b/src/translation/languages/en.json
@@ -1,5 +1,5 @@
 {
-  "app": {
+  "project": {
     "title": "Wellcome to the ita-profiles-frontend project",
     "description": "Frontend part of the ita-profiles project"
   }
