--- a/src/translation/languages/es.json
+++ b/src/translation/languages/es.json
@@ -1,5 +1,5 @@
 {
-  "app": {
+  "project": {
     "title": "Proyecto ita-profiles-frontend",
     "description": "Parte frontend del proyecto ita-profiles"
   }
